[package]
name = "hashmap"
version = "0.1.0"
authors = ["Ali Milhim <ali.milhim@powtoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "hashmap"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "example/bin.rs"